tests/e2e/jspolicy/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: minimal
  labels:
    provider: 'jspolicy'
    area: 'minimal'
spec:
  concurrent: false
  timeouts:
    apply: 5s
    assert: 30s
    cleanup: 30s
    delete: 15s
    error: 30s
  steps:
    - name: Check if jspolicy is installed
      try:
        - assert:
            resource:
              apiVersion: apps/v1
              kind: Deployment
              metadata:
                name: jspolicy
                namespace: jspolicy
              status:
                availableReplicas: 1
